# ExhaustNote

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README_CN.md
.github/workflows/: ci.yml
app/mcu/: CMakeLists.txt  audio_i2s.c  audio_i2s.h  car_loader.cpp  car_loader.h  main.cpp  sd_loader.c  sd_loader.h  system_call.c
app/sim/: CMakeLists.txt  main.cpp
app/sim_gui/: CMakeLists.txt  gui_gauges.cpp  gui_gauges.h  main.cpp  sim_app.cpp  sim_app.h  sim_audio.cpp  sim_audio.h  sim_event.h  sim_gui.cpp  sim_gui.h  sim_input.cpp  sim_input.h  sim_physics.cpp  sim_physics.h  sim_state.h  wav_loader.cpp  wav_loader.h
core/: CMakeLists.txt
core/include/core/: car_config.h  crossfade.h  dsp.h  engine_effects.h  engine_voice.h  mixer.h  sample_player.h  transmission.h  types.h
core/src/: car_config.cpp  crossfade.cpp  dsp.cpp  engine_effects.cpp  engine_voice.cpp  mixer.cpp  sample_player.cpp  transmission.cpp
docs/: algorithm.md  architecture.md  mcu_implementation_plan.md  postmortem-sdio-duplicate-symbol.md  refactor-sim-gui-architecture.md
platform/at32/Artery/: README.md
platform/at32/Artery/ArduinoAPI/: Print.cpp  Print.h
platform/at32/Artery/Libraries/ButtonEvent/: ButtonEvent.cpp  ButtonEvent.h
platform/at32/Artery/Platform/AT32F43x/: CMakeLists.txt  arm-none-eabi.cmake
platform/at32/Artery/Platform/AT32F43x/Config/: mcu_config.h
platform/at32/Artery/Platform/AT32F43x/Core/: at32f435_437_clock.c  cxx_stubs.cpp  wdg.c
platform/at32/Artery/Platform/AT32F43x/FWLibs/cmsis/cm4/device_support/startup/gcc/linker/: AT32F437xM_FLASH.ld
platform/at32/Artery/Tools/: flash.sh  openocd_at32f437.cfg
platform/at32/fatfs/: ffconf.h
platform/include/platform/: audio_output.h  input.h
platform/sim/: CMakeLists.txt  audio_output_sdl.cpp  input_keyboard.cpp  platform_factory.h
scripts/: build_mcu.sh  build_sim.sh  flash.sh  run_tests.sh
tests/: CMakeLists.txt
tests/unit/: test_car_config.cpp  test_crossfade.cpp  test_dsp.cpp  test_engine_effects.cpp  test_engine_voice.cpp  test_mixer.cpp  test_sample_player.cpp  test_sim_state.cpp  test_transmission.cpp
tools/: ac_crossfade_test.py  audio_quality_check.py  build_car_configs.py  crossfade_test.py  extract_fmod_bank.py  flash.sh  format.sh  generate_demo_cars.py
tools/atlink/: ATLink_Console  ATLink_Console.sh  WriteSN.ini  download.sh
